--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    line-height: 0;
+    /* Agregar otros estilos a 0 según sea necesario */
+}
+html{
+
+    background-color: grey;
+    width:55rem;
+
+}
+
+body{
+    background-color: grey;  
+    width: 55rem;
+ 
+
+}
